add feature 'quantile'

--- a/features.ipynb
+++ b/features.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "\n",
     "X_train = pd.DataFrame(index=range(segments), dtype=np.float64,\n",
-    "                       columns=['ave', 'std','kurt', 'max', 'min'])\n",
+    "                       columns=['ave', 'std','kurt','quantile', 'max', 'min'])\n",
     "y_train = pd.DataFrame(index=range(segments), dtype=np.float64,\n",
     "                       columns=['time_to_failure'])\n",
     "\n",
@@ -50,6 +50,7 @@
     "    \n",
     "    X_train.loc[segment, 'ave'] = x.mean()\n",
     "    X_train.loc[segment, 'kurt'] = kurtosis(x)\n",
+    "    X_train.loc[segment, 'quantile'] = np.quantile(x,0.01)\n",
     "    X_train.loc[segment, 'std'] = x.std()\n",
     "    X_train.loc[segment, 'max'] = x.max()\n",
     "    X_train.loc[segment, 'min'] = x.min()\n",
