--- a/features.ipynb
+++ b/features.ipynb
@@ -16,7 +16,7 @@
     "from scipy.stats import kurtosis\n",
     "\n",
     "\n",
-    "data = pd.read_csv(\"train_small.csv\")\n",
+    "data = pd.read_csv(\"data/train_small.csv\")\n",
     "plt.plot(data['time_to_failure'],data['acoustic_data'])\n",
     "plt.show()\n",
     "\n",
@@ -29,33 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('train.csv',dtype={'acoustic_data': np.int16, 'time_to_failure': np.float64})\n",
-    "\n",
-    "rows = 150_000\n",
-    "segments = int(np.floor(train.shape[0] / rows))\n",
-    "\n",
-    "\n",
-    "X_train = pd.DataFrame(index=range(segments), dtype=np.float64,\n",
-    "                       columns=['ave', 'std','kurt','quantile', 'max', 'min'])\n",
-    "y_train = pd.DataFrame(index=range(segments), dtype=np.float64,\n",
-    "                       columns=['time_to_failure'])\n",
-    "\n",
-    "\n",
-    "for segment in tqdm(range(segments)):\n",
-    "    seg = train.iloc[segment*rows:segment*rows+rows]\n",
-    "    x = seg['acoustic_data'].values\n",
-    "    y = seg['time_to_failure'].values[-1]\n",
-    "    \n",
-    "    y_train.loc[segment, 'time_to_failure'] = y\n",
-    "    \n",
-    "    X_train.loc[segment, 'ave'] = x.mean()\n",
-    "    X_train.loc[segment, 'kurt'] = kurtosis(x)\n",
-    "    X_train.loc[segment, 'quantile'] = np.quantile(x,0.01)\n",
-    "    X_train.loc[segment, 'std'] = x.std()\n",
-    "    X_train.loc[segment, 'max'] = x.max()\n",
-    "    X_train.loc[segment, 'min'] = x.min()\n",
-    "    \n",
-    "X_train.head()"
+    "def load_data(file_name):\n",
+    "    data = pd.read_csv(file_name,dtype={'acoustic_data': np.int16, 'time_to_failure': np.float64})\n",
+    "    return data"
    ]
   },
   {
@@ -64,17 +40,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def preproc_data(data, rows=65_536, ratio=0.8):\n",
+    "    # create the segments (each row gets a segment value), no need to randomize\n",
+    "    segments = int(np.floor(data.shape[0] / rows))\n",
+    "    \n",
+    "    # first, create dataframes for X and Y\n",
+    "    X = pd.DataFrame(index=range(segments), dtype=np.float64,\n",
+    "                       columns=['ave', 'std','kurt', 'max', 'min','abs_max',\n",
+    "                                'quantile_095','quantile_099','quantile_09',\n",
+    "                                'quantile_01','quantile_005','quantile_001'])\n",
+    "    Y = pd.DataFrame(index=range(segments), dtype=np.float64,\n",
+    "                           columns=['time_to_failure'])\n",
+    "    \n",
+    "    # split the datasettt into segments to perform agregation calculation on them \n",
+    "    # should be overlaping segments\n",
+    "    for segment in tqdm(range(segments)):\n",
+    "        seg = data.iloc[segment*rows:segment*rows+rows]\n",
+    "        x = seg['acoustic_data'].values\n",
+    "        y = seg['time_to_failure'].values[-1]\n",
+    "        \n",
+    "        # time to failure \n",
+    "        Y.loc[segment, 'time_to_failure'] = y\n",
+    "        \n",
+    "        # all our features\n",
+    "        X.loc[segment, 'ave'] = x.mean()\n",
+    "        X.loc[segment, 'kurt'] = kurtosis(x)\n",
+    "        X.loc[segment, 'quantile_095'] = np.quantile(x,0.95)\n",
+    "        X.loc[segment, 'quantile_099'] = np.quantile(x,0.99)\n",
+    "        X.loc[segment, 'quantile_09'] = np.quantile(x,0.9)\n",
+    "        X.loc[segment, 'quantile_01'] = np.quantile(x,0.1)\n",
+    "        X.loc[segment, 'quantile_005'] = np.quantile(x,0.05)\n",
+    "        X.loc[segment, 'quantile_001'] = np.quantile(x,0.01)\n",
+    "        X.loc[segment, 'std'] = x.std()\n",
+    "        X.loc[segment, 'max'] = x.max()\n",
+    "        X.loc[segment, 'min'] = x.min()\n",
+    "        X.loc[segment, 'abs_max'] = abs(x).max()\n",
+    "    \n",
+    "    train_test_cut_id = int(len(X)*ratio)\n",
+    "    return X[:train_test_cut_id], Y[:train_test_cut_id], X[train_test_cut_id:], Y[train_test_cut_id:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if False:\n",
+    "    data = load_data('data/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, Y_train, X_test, Y_test = preproc_data(data)\n",
     "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(X_train['std'])\n",
-    "plt.show()"
    ]
   },
   {
@@ -85,7 +108,23 @@
    "source": [
     "scaler = StandardScaler()\n",
     "scaler.fit(X_train)\n",
-    "X_train_scaled = scaler.transform(X_train)"
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean(array, step):\n",
+    "    array_len= len(array)\n",
+    "    array_mean = list(array[:])\n",
+    "    mean_step = step\n",
+    "    for i in range(mean_step,array_len):\n",
+    "        array_mean[i] = sum([array[i-j] for j in range(mean_step)])/mean_step\n",
+    "    return array_mean"
    ]
   },
   {
@@ -95,8 +134,19 @@
    "outputs": [],
    "source": [
     "svm = NuSVR()\n",
-    "svm.fit(X_train_scaled, y_train.values.flatten())\n",
-    "y_pred = svm.predict(X_train_scaled)"
+    "svm.fit(X_train_scaled, Y_train.values.flatten())\n",
+    "y_pred = svm.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(y_pred)\n",
+    "plt.plot(Y_test)\n",
+    "plt.show()"
    ]
   },
   {
@@ -106,7 +156,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(y_train.values.flatten(), y_pred)\n",
+    "plt.scatter(Y_train.values.flatten(), y_pred)\n",
     "plt.xlim(0, 20)\n",
     "plt.ylim(0, 20)\n",
     "plt.xlabel('actual', fontsize=12)\n",
@@ -121,8 +171,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "score = mean_absolute_error(y_train.values.flatten(), y_pred)\n",
-    "print(f'Score: {score:0.3f}')"
+    "for i in range(1,20):\n",
+    "    y_pred_mean = mean(y_pred,i)\n",
+    "    score = mean_absolute_error(Y_test.values.flatten(), y_pred_mean)\n",
+    "    print(f'mean: {i}, Score: {score:0.3f}')"
    ]
   },
   {
@@ -130,7 +182,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred_mean = mean(y_pred,13)\n",
+    "plt.plot(y_pred_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# without quantile : 2.202, 2.031 (8)\n",
+    "# with 5 quantiles : 2.171, 2.023 (8)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
