--- a/Kaggle Earthquake.ipynb
+++ b/Kaggle Earthquake.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Le travail a été produit par Nicolas Fley, Romain Pelloie et Julien Raspaud dans le cadre du projet DaC (Données à la Connaissances).\n",
     "\n",
-    "Ce projet a été choisis pour deux principales raisons :\n",
+    "Ce projet a été choisi pour deux principales raisons :\n",
     "\n",
     "- Le fait qu'il se base sur des \"times series\", type de données auquel nous n'avions pas encore été confrontés.\n",
     "- Le fait que ce soit un projet Kaggle avec prix à la clé, en effet cela nous assure la qualité des données d'entrainement.\n",
@@ -71,11 +71,11 @@
     "\n",
     "Nous avons compris le fonctionnement des séismes et le lien avec les `ondes acoustiques` par le biais de cette vidéos : https://www.youtube.com/watch?v=uA_OLKfQpYA\n",
     "\n",
-    "Nous apprenons qu'un seisme est détecté par 3 grosses variations acoustiques. Il y a d'abord des P-Wave (Primary/Pressure Wave) puis des S-Wave (Secondary Wave) avant d'arriver aux Surface Wave qui sont les plus fortes et celles ressenti à la surfaces par les habitants. Ces 3 ondes sont surtout utilisés pour localiser l'epicentre des seismes et les P-Wave peuvent dans une certaines mesure être detectés pour prévenir la population quelques minutes avant que les ondes surfacique soient ressentis.\n",
+    "Nous apprenons qu'un seisme est détecté par 3 grosses variations acoustiques. Il y a d'abord des P-Wave (Primary/Pressure Wave) puis des S-Wave (Secondary Wave) avant d'arriver aux Surface Wave qui sont les plus fortes et celles ressenties à la surface par les habitants. Ces 3 ondes sont surtout utilisés pour localiser l'epicentre des seismes et les P-Wave peuvent dans une certaines mesure être detectées pour prévenir la population quelques minutes avant que les ondes surfacique soient ressenties.\n",
     "\n",
-    "Néanmoins, ce projet n'est pas focalisés sur ces 3 types d'ondes, en effet, le dataset est issue de mesures effectuées expérimentalement en laboratoire. Nous devons déterminer, en se basant sur l'ondes acoustique relevé, le temps qu'il reste avant le prochain séisme.\n",
+    "Néanmoins, ce projet n'est pas focalisé sur ces 3 types d'ondes, en effet, le dataset est issu de mesures effectuées expérimentalement en laboratoire. Nous devons déterminé, en se basant sur l'ondes acoustique relevée, le temps qu'il reste avant le prochain séisme.\n",
     "\n",
-    "Contrairement à ce que nous pension au départ, le but n'est donc pas de détecter ces 3 ondes mais d'utiliser les ondes acoustiques relevés par le seismographe du laboratoire afin d'en extraire des features ou des motifs permettant de détecter avec précision le moment de la prochaine rupture."
+    "Contrairement à ce que nous pensions au départ, le but n'est donc pas de détecter ces 3 ondes mais d'utiliser les ondes acoustiques relevées par le sismographe du laboratoire afin d'en extraire des features ou des motifs permettant de détecter avec précision le moment de la prochaine rupture."
    ]
   },
   {
@@ -89,10 +89,10 @@
     "#### Généralités sur les valeurs\n",
     "\n",
     "Ce dataset contient deux colonnes.\n",
-    "La première colonne est nommée `acoustic_data` qui contient les valeurs entières dont la répartition reste à définir. On nottera néanmoins grâce à la seconde cellule représentant 50 valeurs qu'elles sont réparti et ne suivent pas de motif à première vue.\n",
+    "La première colonne est nommée `acoustic_data` qui contient les valeurs entières dont la répartition reste à définir. On notera néanmoins grâce à la seconde cellule représentant 50 valeurs qu'elles sont réparties et ne suivent pas de motif à première vue.\n",
     "La seconde colonne est nommée `time_to_failure` et contient une valeur flottante faisant référence au temps restant avant la prochaine rupture.\n",
     "\n",
-    "On notera qu'il se passe environ une nanoseconde entre deux mesure, l'échantillonnage est d'environ 1Ghz."
+    "On notera qu'il se passe environ une nanoseconde entre deux mesures, l'échantillonnage est d'environ 1Ghz."
    ]
   },
   {
@@ -133,18 +133,18 @@
    "source": [
     "#### Affichage et répartition temporelle\n",
     "\n",
-    "Nous avons affiché les valeurs celon différentes échelles, après plusieurs tests nous avons remarqués que le dataset était constitué d'une multitude d'ensembles de 4096 points espacés dans le temps. Nous allons parcourir les différentes échelles et en extraires les informations utiles.\n",
+    "Nous avons affiché les valeurs selon différentes échelles, après plusieurs tests nous avons remarqué que le dataset était constitué d'une multitude d'ensembles de 4096 points espacés dans le temps. Nous allons parcourir les différentes échelles et en extraire les informations utiles.\n",
     "\n",
-    "- **200 points** (~200ns) : pas de motifs apparant, le signal semble très bruité à cette échelle.\n",
-    "- **4096 points** (~4us) : le signal semble plus interessant, des valeurs semblent pouvoir être extraites de ce type de signal.\n",
+    "- **200 points** (~200ns) : pas de motif apparent, le signal semble très bruité à cette échelle.\n",
+    "- **4096 points** (~4us) : le signal semble plus intéressant, des valeurs semblent pouvoir être extraites de ce type de signal.\n",
     "- **next 4096 points** (~4us) : idem, on notera un décalage d'une milliseconde avec le précédent signal, il n'y a pas de lien direct visible avec les 4096 points précédentts\n",
     "- **20_000 points** (~5ms) : on détecte sur ce graphique la mesure, effectuée toutes les millisecondes des 4096 points.\n",
     "- **time to failure** (~2.5s) : ce graphique représente la variation de la grandeur `time to failure`, on notera que l'on commence à environ 2s, que l'on descend à 0 et que l'on reprend à 12 pour descendre vers 10s.\n",
     "- **10_000_000 points** (~2.5s) : on note une grosse amplitude aux alentours des 0ms, on voit aussi les limites de cet affichage. En effet on se rend compte qu'avec ce principe, on lit les points à l'envers (car on utilise le `time to failure` comme coordonnée. On utilisera donc dès à présent une abscisse générale et on mettra le `time to failure` en avant sur l'`acoustic data` comme représenté dans la dernière figure.\n",
     "\n",
-    "Les 10_000_000 de points forment 2441 ensembles de 4096 points, sur cet ensemble, une rupture à eu lieu, le `time to failure` reprenant à une valeur beaucoup plus haute.\n",
+    "Les 10_000_000 de points forment 2441 ensembles de 4096 points, sur cet ensemble, une rupture a eu lieu, le `time to failure` reprenant à une valeur beaucoup plus haute.\n",
     "\n",
-    "Nous pensons donc intuitivement qu'il nous faudrait utiliser ces ensemble de 4096 points afin de déterminer le temps restant avant la prochaine rupture."
+    "Nous pensons donc intuitivement qu'il nous faudrait utiliser ces ensembles de 4096 points afin de déterminer le temps restant avant la prochaine rupture."
    ]
   },
   {
@@ -199,7 +199,7 @@
    "source": [
     "#### Distribution\n",
     "\n",
-    "En enlevant les valeurs extrêmes, on voit que les valeurs suivent une répartition normal centrée en 4,5 et d'écart type 17,8. Faire un scaling sur l'ensemble de ces valeurs est donc une option à envisager."
+    "En enlevant les valeurs extrêmes, on voit que les valeurs suivent une répartition normale centrée en 4,5 et d'écart type 17,8. Faire un scaling sur l'ensemble de ces valeurs est donc une option à envisager."
    ]
   },
   {
@@ -220,7 +220,7 @@
    "source": [
     "## Extraction des features et entrainement\n",
     "\n",
-    "Nous avons défini une fonction nous permettant d'extraire un certain nombre de features composant chacune une agregation des valeurs d'un ensemble donnée.\n",
+    "Nous avons défini une fonction nous permettant d'extraire un certain nombre de features composant chacune une agregation des valeurs d'un ensemble donné.\n",
     "\n",
     "On extrait ainsi pour chaque ensemble :\n",
     "- la moyenne\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous utilisons le dataset entier afin d'en extraires les features qui nous interessent, nous séparons nos données en sous ensembles de taille 4096 afin de respecter la répartition des données vue précédemment.\n",
+    "Nous utilisons le dataset entier afin d'en extraire les features qui nous interessent, nous séparons nos données en sous ensembles de taille 4096 afin de respecter la répartition des données vue précédemment.\n",
     "\n",
     "Cette étape peut aussi prendre beaucoup de temps."
    ]
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous extrayons de ces features l'ensemble d'entrainement et l'ensemble de test. Comme nous n'optimisons aucun hyper paramètre, une séparation naïve tel que prendre les 90% premiers éléments pour l'entrainement est les 10% restant pour le test est donc normale."
+    "Nous extrayons de ces features l'ensemble d'entrainement et l'ensemble de test. Comme nous n'optimisons aucun hyper paramètre, une séparation naïve tel que prendre les 90% premiers éléments pour l'entrainement est les 10% restants pour le test est donc normale."
    ]
   },
   {
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Au départ un modèle svm `NuSVR` avait été utilisé, mais sa complexité quadratique semble être trop lente pour nos ordinateurs. Nous avons donc basculé vers un model de `RandomForestRegressor` qui semble tout autant apprecié par la communauté."
+    "Au départ un modèle svm `NuSVR` avait été utilisé, mais sa complexité quadratique semble être trop lente pour nos ordinateurs. Nous avons donc basculé vers un modèle de `RandomForestRegressor` qui semble tout autant apprecié par la communauté."
    ]
   },
   {
@@ -430,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`y_pred` n'est pas débruité sur la cellule suivante, on note la grande variance de ses valeur, le moyennage de 36 de ces valeurs permet d'obtenir la figure suivante."
+    "`y_pred` n'est pas débruité sur la cellule suivante, on note la grande variance de ses valeurs, le moyennage de 36 de ces valeurs permet d'obtenir la figure suivante."
    ]
   },
   {
@@ -467,8 +467,8 @@
    "source": [
     "### Submission\n",
     "\n",
-    "Certaines notions précédement utilisés sont expliqués ici. En effet, le test de notre algorithme par Kaggle se fait par la prédiction de 2624 valeurs, chacune grâce à un échantillon de 150_000 valeurs. Une seule valeur doit être envoyé pour l'ensemble de ces 150_000 valeurs. Le score est déterminé par une Mean Absolute Error.\n",
-    "La solution utilisé a donc été un moyennage. Cette solution est justifiable par le fait que l'on voit que moyenner la prédiction de 36 ensemble ne semble faire que diminuer la MAE."
+    "Certaines notions précédement utilisées sont expliquées ici. En effet, le test de notre algorithme par Kaggle se fait par la prédiction de 2624 valeurs, chacune grâce à un échantillon de 150_000 valeurs. Une seule valeur doit être envoyée pour l'ensemble de ces 150_000 valeurs. Le score est déterminé par une Mean Absolute Error.\n",
+    "La solution utilisée a donc été un moyennage. Cette solution est justifiable par le fait que l'on voit que moyenner la prédiction de 36 ensemble ne semble faire que diminuer la MAE."
    ]
   },
   {
@@ -514,11 +514,11 @@
     "\n",
     "Une solution pour augmenter notre score a été d'utiliser NuSVR et entrainer notre ensemble de donnée sur la totalité de l'ensemble de test, donc 150_000 points, notre MAE annoncée passe alors à 1.639 et notre classement monte 1853ème : https://www.kaggle.com/c/LANL-Earthquake-Prediction/leaderboard (nous sommes CS-DAC-Team)\n",
     "\n",
-    "On pourra expliquer cette situation par l'importance que doivent avoir les valeur extrême et qui sont étouffés par la moyenne, ce qui semble néanmoins étonnant au regard de la MAE.\n",
+    "On pourra expliquer cette situation par l'importance que doivent avoir les valeurs extrêmes et qui sont étoufféss par la moyenne, ce qui semble néanmoins étonnant au regard de la MAE.\n",
     "\n",
-    "Celà est d'autant plus étonnant que notre MAE personnelle est d'environ 2.1 en prenant des sample de 4096 valeurs et qu'elle monte à 2.3 en prenant des sample de 150_000 valeurs.\n",
+    "Cela est d'autant plus étonnant que notre MAE personnelle est d'environ 2.1 en prenant des sample de 4096 valeurs et qu'elle monte à 2.3 en prenant des sample de 150_000 valeurs.\n",
     "\n",
-    "Augmenter notre nombre de features et/ou faire de la grid search sur les hyperparamètre de notre modèle de RandomTreeRegressor pourrait nous permettre d'améliorer ce score."
+    "Augmenter notre nombre de features et/ou faire de la grid search sur les hyperparamètres de notre modèle de RandomTreeRegressor pourrait nous permettre d'améliorer ce score."
    ]
   },
   {
@@ -530,9 +530,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
